[package]
name = "wasm-rs"
version = "0.1.0"
authors = ["kgtkr <kgtkr.jp@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
leb128 = "0.2"
nom = "5.0.1"
serde_json = "*"
num = "*"
num-traits = "*"

[dev-dependencies]
proptest-derive = { git = "https://github.com/alessandrod/proptest.git", rev = "983253ec281c5e71ca16e726eabe6a8dbf5be675" }
proptest = "0.9.4"
