[package]
name = "wasm-rs"
version = "0.1.0"
authors = ["kgtkr <kgtkr.jp@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
leb128 = "0.2"
nom = "5.0.1"
serde_json = "1.0.44"
num = "0.2.0"
frunk = "0.3.0"
generic-array = "0.13.2"
typenum = "1.11.2"


[dev-dependencies]
proptest-derive = { git = "https://github.com/alessandrod/proptest.git", rev = "983253ec281c5e71ca16e726eabe6a8dbf5be675" }
proptest = "0.9.4"
lazy_static = "*"
maplit = "1.0.2"